test/functions/intents/out/split-init-out-formal-no-type-used.chpl

proc f(out arg) {
  usearg(arg);
}

proc usearg(arg) { }

proc main() {
  var x;
  f(x);
}
